fixed the default margin overflow in block-quotes.

--- a/src/view/css/page.css
+++ b/src/view/css/page.css
@@ -86,6 +86,10 @@
   padding: calc(2 * var(--SML));
 }
 
+#page #main blockquote p {
+  margin: 0;
+}
+
 #page #main ul,
 #page #main ol {
   margin: var(--MED) var(--BIG);
